--- a/vignettes/vrnmf_germline.Rmd
+++ b/vignettes/vrnmf_germline.Rmd
@@ -69,19 +69,21 @@ Given known spectra of mutational components, intensities can then be obtained u
 ```{r,results="hide"}
 intensities.info <- factor_intensities(as.matrix(vr$C), t(as.matrix(vol.info$X.process)), 
                                   fit.nmf = FALSE, fit.factor = TRUE, 
-                                  n.iter = 1e+2, verbose = TRUE) 
+                                  n.iter = 1e+2, verbose = FALSE) 
+```
 
+```{r}
 str(intensities.info)
 ```
 
 ```{r}
 intensities <- cbind(rate.info[,1:3],t(intensities.info$intensities))
-intensities <-t(intensities.info$intensities)
+intensities <- t(intensities.info$intensities)
 
 ```
 
 Intensities can now be visualized:
 ```{r,results="hide",fig.width = 6, fig.height = 3}
-plot.intensities(intensities[,2], rate.info, chr=16, start=0,end=4e+7,  span.wind=100)
+plot.intensities(intensities[,2], rate.info, chr=16, start=0,end=4e+7,  span.wind=30)
 ```
 
